--- a/src/resources/css/defaultStyles.css
+++ b/src/resources/css/defaultStyles.css
@@ -9,9 +9,10 @@
 	}
 }
 		
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 769px) 
+{
 	.form {
-		width: 80%;
+		width: 55%;
 		margin: auto;
 	}
 }
