--- a/src/resources/css/defaultStyles.css
+++ b/src/resources/css/defaultStyles.css
@@ -7,12 +7,24 @@
 		margin: auto;
 		overflow: auto;
 	}
+	
+	.produtosList {
+		height: 170px;
+		overflow-y: scroll;
+		overflow-x: hidden;
+	}
 }
 		
 @media screen and (min-width: 769px) 
 {
 	.form {
-		width: 55%;
+		width: 50%;
 		margin: auto;
+	}
+	
+	.produtosList {
+		height: 170px;
+		overflow-y: scroll;
+		overflow-x: hidden;
 	}
 }
